# plugins-kit

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  pyproject.toml
plugins/agent-glue/: ARCHITECTURE.md  ARCHITECTURE.md.html  CLAUDE.md  CLAUDE.md.html  DESIGN.md  DESIGN.md.html  IMPLEMENTATION-PLAN.md  IMPLEMENTATION-PLAN.md.html  USER-FEEDBACK.md  USER-FEEDBACK.md.html  architecture.html  implementation-plan.html  index.html  pyproject.toml
plugins/agent-glue/.claude-plugin/: plugin.json
plugins/agent-glue/agent_glue_lib/: __init__.py  catalog.py  loader.py  validator.py
plugins/agent-glue/agent_glue_lib/core/: __init__.py  catalog.py  dispatch.py  disposition.py  loader.py  validator.py
plugins/agent-glue/claude-work-queue/: ARCHITECTURE.md  ARCHITECTURE.md.html  CLAUDE.md  CLAUDE.md.html  DESIGN.md  DESIGN.md.html  IMPLEMENTATION-PLAN.md  IMPLEMENTATION-PLAN.md.html
plugins/agent-glue/core/: ARCHITECTURE.md  ARCHITECTURE.md.html  CLAUDE.md  CLAUDE.md.html  DESIGN.md  DESIGN.md.html  IMPLEMENTATION-PLAN.md  IMPLEMENTATION-PLAN.md.html
plugins/agent-glue/core/components/: Description.yaml  Errored.yaml  Name.yaml  SourceRunId.yaml  Status.yaml  Timestamps.yaml
plugins/agent-glue/graph-system/: ARCHITECTURE.md  ARCHITECTURE.md.html  CLAUDE.md  CLAUDE.md.html  DESIGN.md  DESIGN.md.html  IMPLEMENTATION-PLAN.md  IMPLEMENTATION-PLAN.md.html  runtime.html
plugins/agent-glue/graph-system/components/: Config.yaml  CreatedAt.yaml  Expected.yaml  FixtureId.yaml  FixtureRef.yaml  Fixtures.yaml  Implementation.yaml  InitState.yaml  Outputs.yaml  ParallelSpec.yaml  Prompt.yaml  Rules.yaml  ShowWork.yaml  Source.yaml  Start.yaml  StartInput.yaml  StateDecl.yaml  Target.yaml  TerminalNode.yaml  TerminalOutput.yaml  TerminalState.yaml  Topology.yaml  Version.yaml
plugins/agent-glue/graph-system/entities/: Cohort.yaml  Edge.yaml  ExpectedOutcome.yaml  Fixture.yaml  Graph.yaml  Node.yaml
plugins/agent-glue/reviews/: REVIEW-OVERVIEW.md  REVIEW-OVERVIEW.md.html  applied-changes.md  first-pass-dialog-review.md  localization-review.md  synthesis.md
plugins/agent-glue/reviews/core/: entity-yaml-model-and-ecs-loader.md  entity-yaml-model-and-ecs-loader.md.html
plugins/agent-glue/scripts/: precommit_consistency.py
plugins/agent-glue/tests/: conftest.py  test_loader.py  test_validator.py
plugins/agent-glue/tests/core/: test_catalog.py  test_dispatch.py  test_disposition.py  test_full_kit.py  test_loader.py  (+3 more)
plugins/agent-glue/work-system/: ARCHITECTURE.md  ARCHITECTURE.md.html  CLAUDE.md  CLAUDE.md.html  DESIGN.md  DESIGN.md.html  IMPLEMENTATION-PLAN.md  IMPLEMENTATION-PLAN.md.html  cache-substrate.html  submit-lifecycle.html
plugins/awesome-kit/: bootstrap.json  custom_bootstrap.py  pyproject.toml
plugins/awesome-kit/.claude-plugin/: plugin.json  poster.yaml
plugins/bootstrap/: ARCHITECTURE.md  BootstrapPhases.md  MILESTONES.md  bootstrap.json  known_marketplaces.json  pyproject.toml
plugins/bootstrap/.claude-plugin/: plugin.json  poster.yaml
plugins/bootstrap/bootstrap_lib/: __init__.py  config.py  config_check.py  config_resolve.py  downloader.py  engine.py  font_check.py  git_dep_check.py  json_check.py  log.py  manifest_merge.py  marketplace_lifecycle.py  path_check.py  path_repair.py  platform_detect.py  plugin_resolve.py  python_stub_check.py  shared_lib.py  tool_check.py  tool_paths.py  var_resolve.py  venv_check.py
plugins/bootstrap/case-studies/: local-review-kit.md  test-plugin.md  unreal-kit.md  update01-bootstrap.md
plugins/bootstrap/defaults/: config.json
plugins/bootstrap/engine/: bootstrap_engine.py  config.py
plugins/bootstrap/hooks/: hooks.json
plugins/bootstrap/lib/: cache.py  log.py  manifest_merge.py  marketplace_lifecycle.py  plugin_lifecycle.py  plugin_resolve.py  pypi_check.py  tool_check.py
plugins/bootstrap/scripts/: bootstrap-reset-cooldown.sh  diagnose-python-venv.sh
plugins/openrouter-kit/: bootstrap.json  custom_bootstrap.py  pyproject.toml
plugins/openrouter-kit/.claude-plugin/: plugin.json
plugins/openrouter-kit/scripts/: openrouter_kit_cli.py
plugins/p4-kit/: bootstrap.json  custom_bootstrap.py  pyproject.toml
plugins/p4-kit/.claude-plugin/: plugin.json
plugins/p4-kit/defaults/: config.yaml
plugins/p4-kit/scripts/: bootstrap_guard.py  cleanup_legacy_config.py  config_utils.py  prepare_review.py  run-review.py  setup.py
plugins/workflow-kit/: bootstrap.json  pyproject.toml
plugins/workflow-kit/.claude-plugin/: plugin.json
plugins/workflow-kit/agents/: workflow-kit-agent.md
plugins/workflow-kit/examples/: node-strategies.example.js  node-strategies.workflow.yaml  review-changes.workflow.yaml
plugins/workflow-kit/scripts/: compile_workflow.py  openrouter_run.py
plugins/workflow-kit/workflow_kit_lib/: __init__.py  compiler.py  errors.py  expr.py  loader.py  model.py
(+453 files in other folders)
