[project]
name = "plugins-kit"
version = "0.1.0"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyyaml", "websocket-client>=1.6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "plugins/bootstrap",
    "plugins/bootstrap/engine",
    "plugins/skills-kit",
    "plugins/skills-kit/skills/skill-authoring/scripts",
    "plugins/skills-kit/skills/claude-md-audit/scripts",
]
