[project]
name = "agent-glue"
version = "0.1.0"
description = "Yaml-driven ECS kit for orchestrating units of work into pipelines with typed contracts, discriminated-union dispatch, and a show-your-work-as-cache substrate."
requires-python = ">=3.10"

dependencies = [
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_glue_lib*"]
