[project]
name = "bootstrap"
version = "0.9.2"
requires-python = ">=3.12,!=3.14.*"
dependencies = ["pyyaml"]

[project.scripts]
bootstrap-engine = "bootstrap_lib.engine:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bootstrap_lib*"]
