[project]
name = "p4-kit"
version = "0.10.0"
description = "Host-side dependencies for p4-kit plugin"
requires-python = ">=3.12,!=3.14.*"

# bootstrap_lib is provided via the bootstrap shared-libs .pth (this plugin declares
# "shared_lib_imports": ["bootstrap_lib"] in bootstrap.json), not as a pip dependency.
dependencies = []
