[project]
name = "workflow-glue"
version = "0.1.0"
description = "Host-side library for the workflow-glue plugin: validate + compile .workflow.yaml to native Workflow tool scripts."
requires-python = ">=3.10"

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["workflow_glue_lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
