[project]
name = "workflow-kit"
version = "0.2.0"
description = "Host-side library for the workflow-kit plugin: validate + compile .workflow.yaml to native Workflow tool scripts."
requires-python = ">=3.10"

dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["workflow_kit_lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
